k8s-setup/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress 
  namespace: argocd
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # High-performance SSL passthrough settings for ArgoCD
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx 
  tls: 
    - hosts: 
      - argo-k8s.marinet.shop
      secretName: argocd-secret
  rules:
  - host: argo-k8s.marinet.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              name: https # Fixed the formatting here
